css/style.css
/* ... */
.btn-cart:hover{
    color: #2b87ad;
}
.btn-close:hover{
    background-color: #bdbec0;
    color: red;
}
.product_thumbnail {
	width: 80%;
}

.product_thumbnail_lg {
	position: relative;
    width:128px;
}
.link-overlay {
    display: inline-block;
    position: absolute;
    width: 100%;
    height: 100%;
    color:transparent !important;
    top:0;
    left:0;

}
.search-position{
    margin-left: 170px;
}
input.form-control{
    border-radius: 25px;
    max-height: 28px;
}
select.form-control.f-17,select#sex.form-control{
    border-radius: 25px;
    max-height: 39px; 
}
button.btn.bg-search.btn-rad{
    max-height: 28px;
}
button.btn.bg-gray.btn-rad{
    max-height: 28px;
}
i.fa.fa-search{
    position: relative;
    top: -4px;
}
form.navbar-form{
    position: relative;
    top: 4px;
}
button#add-to-cart-btn.btn-landslide:hover{
    color: #fff;
}
a{
    color: #fff;
}
a.btn{
    color: #58585B;
    font-family: Proxima Nova;
    font-weight: normal;
    border-right: solid 1px;
}
a.btn:hover{
    color: #2a88ad;
}
a.btn.btn-lg{
    background-color: #808284;
    color: #fff;
    font-size: 24px;
    font-family: Proxima Nova;
    font-weight: normal;
    min-width: 240px;
    border-top-left-radius: 17px;
    border-top-right-radius: 17px;
    padding: 5px;
}
a.btn.btn-lg:hover{
    background-color: #BBBDC0;
    color: #fff;
}
a.btn.btn-lg.active{
    background-color: #BBBDC0;
    color: #404041;
    font-size: 24px;
    font-family: Proxima Nova;
    font-weight: normal;
    min-width: 240px;
    border-top-left-radius: 17px;
    border-top-right-radius: 17px;
    padding: 5px;
}
.nav .open>a, .nav .open>a:hover, .nav .open>a:focus{
    background-color: #252525 !important;
    color: #2a88ad; !important;
}
a.f-18:hover,i.fa.fa-user:hover,a.dropdown-toggle.bg-black:hover,ul.dropdown-menu:hover{
    background-color: #252525 !important;
    color: #2b87ad !important;
}
a.dropdown-toggle.bg-black:active{
    background-color: #252525 !important;
}
ul.dropdown-menu.show{
    background-color: transparent;
    color: #fff;
}
.navbar-collapse.in{
    overflow-y: hidden !important;
}
.popover {min-width:400px;}
.popover-title{
    color: #000;
}
.popover-content{
    color: #000;
}
.popover-cart {
    min-width:100px;
    min-width:100px !important;
}

/* Start Dev Dashboard */
.dashboard-product-box{
    position: relative;
    background: #bdbec0;
    padding: 15px;
    margin: 15px;
}
/*Scrollbar*/
.scrollbar
{
    margin-left: 22px;
    float: left;
    height: 600px;
    width: 1340px;
    overflow-y: scroll;
    margin-bottom: 25px;
}
.scrollbar-earners
{
    margin-left: 22px;
    float: left;
    height: 160px;
    width: 1340px;
    overflow-y: scroll;
    margin-bottom: 25px;
}
.scrollbar-earners-alphabet
{
    margin-left: 22px;
    float: left;
    height: 300px;
    width: 1340px;
    overflow-y: scroll;
    margin-bottom: 25px;
}
.scrollbar-transaction
{
    margin-left: 22px;
    float: left;
    height: 130px;
    width: 500px;
    overflow-y: scroll;
    margin-bottom: 25px;
}
.force-overflow
{
    min-height: 450px;
}

#wrapper
{
    text-align: center;
    margin: auto;
}

/*
*  STYLE 1
*/

#style-1::-webkit-scrollbar-track
{
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    border-radius: 10px;
    background-color: #F5F5F5;
}

#style-1::-webkit-scrollbar
{
    width: 12px;
    background-color: #F5F5F5;
}

#style-1::-webkit-scrollbar-thumb
{
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
    background-color: #555;
}
/*Toggle Switch*/
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

.switch input {display:none;}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #737373;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #33cc33;
}

input:focus + .slider {
    box-shadow: 0 0 1px #33cc33;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}
/*End Toggle Switch*/
.more {
    display: none;
}
a.showLink{
    text-decoration: none;
    color: #252525;
}
.img-300{
    height: 300px !important;
    width: 300px !important;
}
/*End Scrollbar*/

